# xmake_ls

./: .emmyrc.json  .pre-commit-config.yaml  Cargo.toml  README.md  typos.toml
.github/workflows/: build.yml  (+1 more)
crates/xmake_code_analysis/: Cargo.toml  README.md
crates/xmake_code_analysis/resources/std/: base64.lua  csv.lua  debug.lua  global.lua  hash.lua  http.lua  io.lua  json.lua  net.lua  os.lua  package.lua  path.lua  process.lua  semver.lua  string.lua  table.lua  timer.lua  utils.lua
crates/xmake_code_analysis/resources/std/xmake/: common.lua  conditions.lua  configuration_option.lua  custom_rule.lua  global_interfaces.lua  option_instance.lua  package_dependencies.lua  package_instance.lua  plugin_task.lua  project_target.lua  target_instance.lua
crates/xmake_code_analysis/src/: lib.rs
crates/xmake_code_analysis/src/compilation/analyzer/: mod.rs
crates/xmake_code_analysis/src/compilation/test/: and_or_test.rs  annotation_test.rs  closure_generic.rs  closure_param_infer_test.rs  closure_return_test.rs  flow.rs  for_range_var_infer_test.rs  generic_test.rs  member_infer_test.rs  metatable_test.rs  multi_return.rs  pcall_test.rs  return_unwrap_test.rs  static_cal_cmp.rs  tuple_test.rs  type_check_test.rs  unpack_test.rs
crates/xmake_code_analysis/src/db_index/: mod.rs
crates/xmake_code_analysis/src/db_index/declaration/: decl.rs  decl_tree.rs
crates/xmake_code_analysis/src/db_index/global/: mod.rs
crates/xmake_code_analysis/src/db_index/module/: mod.rs  test.rs  workspace.rs
crates/xmake_code_analysis/src/db_index/property/: mod.rs  property.rs
crates/xmake_code_analysis/src/db_index/type/: humanize_type.rs  types.rs
crates/xmake_code_analysis/src/db_index/xmake/: mod.rs  target.rs  target_or_package.rs  xmake_function.rs
crates/xmake_code_analysis/src/diagnostic/: lua_diagnostic.rs
crates/xmake_code_analysis/src/diagnostic/checker/: check_param_count.rs  code_style_check.rs  deprecated.rs  mod.rs  param_type_check.rs
crates/xmake_code_analysis/src/diagnostic/test/: access_invisible_test.rs  assign_type_mismatch_test.rs  await_in_sync_test.rs  cast_type_mismatch_test.rs  check_return_count_test.rs  disable_line_test.rs  generic_constraint_mismatch_test.rs  inject_field_test.rs  missing_fields_test.rs  missing_parameter_test.rs  need_check_nil_test.rs  param_type_check_test.rs  redefined_local_test.rs  redundant_parameter_test.rs  return_type_mismatch_test.rs  unbalanced_assignments_test.rs  undefined_field_test.rs  undefined_global_test.rs  unnecessary_if_test.rs
crates/xmake_code_analysis/src/resources/: best_resource_path.rs  mod.rs
crates/xmake_code_analysis/src/test_lib/: mod.rs
crates/xmake_ls/: Cargo.toml  README.md
crates/xmake_ls/src/: lib.rs
crates/xmake_ls/src/context/: file_diagnostic.rs  mod.rs  snapshot.rs  status_bar.rs  workspace_manager.rs
crates/xmake_ls/src/handlers/: mod.rs  request_handler.rs
crates/xmake_ls/src/logger/: best_log_path.rs  mod.rs
crates/xmake_ls/src/util/: module_name_convert.rs
(+144 files in other folders)
